tdf#123956 Qt5 update cursor position from IM meta

This sets the cursor position to the one provided by the
QInputMethodEvent::Cursor attribute.

Change-Id: I4a99f9939b53c69631e45d41102bf9c7f53f0ff5